Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-9306

Assertion crash due to the race bug between the flusher and the bg fetcher

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 2.5.0, 3.0
    • 2.1.0
    • couchbase-bucket
    • Security Level: Public
    • None

    Description

      memcached<0.80.0>: memcached: src/ep.cc:1115: void EventuallyPersistentStore::completeBGFetchMulti(uint16_t, std::vector<VBucketBGFetchItem*, std::allocator<VBucketBGFetchItem*> >&, hrtime_t): Assertion `v->isDirty()' failed.

      Attachments

        For Gerrit Dashboard: MB-9306
        # Subject Branch Project Status CR V

        Activity

          People

            sundar Sundar Sridharan (Inactive)
            chiyoung Chiyoung Seo (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty